[package]
name = "alpha_raptor_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
axum = { version = "0.8", features = ["http1", "json", "query", "tokio"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
flate2 = "1.1"
gtfs-rt = "0.5"
gtfs-structures = { version = "0.47", default-features = false }
memmap2 = "0.9"
osmpbfreader = "0.19"
protobuf = "3.7"
prost = "0.11"
quick-xml = "0.38"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rstar = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
